# claude-token-tracker

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
scripts/: generate_icons.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  peak_engine.rs  scheduler.rs  state.rs  stats_reader.rs  status_poller.rs  subscription_tracker.rs  tray.rs
src/components/dashboard/: AnalyticsTab.tsx  DashboardShell.tsx  HistoryTab.tsx  ModeBreakdown.tsx  OverviewTab.tsx  PeakHoursGrid.tsx  ProjectRanking.tsx  ServiceStatusCards.tsx  SessionsTable.tsx  TimeRangeSelector.tsx  TitleBar.tsx  TokenBreakdown.tsx  UsageChart.tsx
src/components/popup/: PopupFooter.tsx  PopupShell.tsx  QuickStats.tsx  Recommendation.tsx  ServiceStatusRow.tsx  StatusIndicator.tsx  SubscriptionBars.tsx
src/components/settings/: CostLegend.tsx  SettingsPanel.tsx
src/hooks/: useAnalytics.ts  usePeakLevel.ts  useSettings.ts  useStats.ts  useSubscriptionUsage.ts
src/lib/: events.ts  format.ts  sounds.ts  storage.ts
src/types/: analytics.ts  peak.ts  stats.ts  subscription.ts
