[package]
name = "claude-peak-monitor"
version = "0.2.2"
description = "System tray app that monitors Claude AI peak usage hours"
authors = ["AGENCIA RSE"]
edition = "2021"

[lib]
name = "claude_peak_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "sync"] }
log = "0.4"
